Renamed submodule to mirror naming conventions of repos.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "ApiSpring"]
-	path = ApiSpring
-	url = git@github.com:Magenic/BikeShopAPISpring.git
-[submodule "SpringApi"]
-	path = SpringApi
+[submodule "APISpring"]
+	path = APISpring
 	url = git@github.com:Magenic/BikeShopAPISpring.git
